unit_tests/preprocessor/errors/recover-from-bad-elif-expression.correct
preprocessor/errors/recover-from-bad-elif-expression:3: error: Invalid expression
